[#65][#43] Holy balls the worst (temporary) hack ever to make MBLD render ok on mobile. TODO FIX THIS TERRIBLE NONSENSE.

--- a/app/static/less/timer/common.less
+++ b/app/static/less/timer/common.less
@@ -69,11 +69,10 @@
         pointer-events: none;
     }
 
-    #mbldEntryForm, #mbldEntryForm2 {
+    #mbldEntryForm, #mbldEntryForm2, #mbldEntryForm3 {
         .form-group {
             margin: 15px;
         }
-
         margin-bottom: 0;
     }
 }
