--- a/app/static/less/timer/mobile.less
+++ b/app/static/less/timer/mobile.less
@@ -97,3 +97,23 @@
     height: 40px;
     width: 60px;
 }
+
+#the_mbld_entry {
+    &.extended {
+        height: 85%;
+
+        #mbldEntryForm, #mbldEntryForm2, #mbldEntryForm3 {
+            .form-group {
+                margin-bottom: 0;
+            }
+            margin-bottom: 0;
+        }
+    }
+}
+
+.mods_area {
+    &.reduced {
+        height: 15%;
+        width: 100%;
+    }
+}
